Gap issue46 (#51)
* Reorder & renamed sidebar sections #46

* Updated regional summary text and added legend description accordion #46

* Created network gap score description accordion #46

* Minor additions; Run Analysis --> Run, add legend title of Transit Gap Priority #46

* Text changes & transit layer toggle

* Municipality popups on hover #46

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,8 +3,11 @@ body, #app{
     overflow-y: hidden;
     display: flex;
     flex-flow: column;
-    font-family: 'Roboto', 'Arial', sans-serif;
-    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif
+} 
+
+#main{
+    height: 85vh;
     width: 100vw;
 } 
 
